# rust-topology

./: Cargo.toml  arch.txt
src/: async_communication.rs  com.rs  communication.rs  internal_bus.rs  ip.rs  main.rs  p4_advanced.rs  p4_basic.rs  sysmodule.rs  utils.rs
src/channel/: async_communication.rs  internal_bus.rs  mod.rs
src/net/: chatgpt.rs  device.rs  mod.rs  udp_state.rs
src/sysmodules/: com.rs  common.rs  discovery.rs  mod.rs  test_commands.rs
