[package]
name = "topology_concept"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
bichannel = "0.0.4"
duplex = "0.16.0"
either = "1.8.1"
futures = "0.3.28"
ipnet = "2.7.2"
serde = {version = "1.0.160", features=["std", "derive"]}
serde_cbor = "0.11.2"
serde_json = "1.0.96"
tokio = {version="1.28.0", features=["sync", "rt-multi-thread", "rt", "macros", "time"]}
